fixed the lion overflow issue and the video taking up more space than it needs.

--- a/frontend/src/components/SortingVisualizer/styles/Board.module.css
+++ b/frontend/src/components/SortingVisualizer/styles/Board.module.css
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     width: 60em;
     justify-content: center;
     height: 300px;
